# tracing-opentelemetry

./: .gitignore  Cargo.toml  Dockerfile  agent.yaml  docker-compose.yml  otel-config.yaml
promtail/: config.yaml
src/: main.rs
