[package]
name = "tracing-opentelemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-core = "0.1.28"
tracing-error = "0.2.0"
tracing-flame = "0.2.0"
#tracing-tower = "0.1.0"
tracing-futures = { version = "0.2.5" }
tracing-attributes = "0.1.22"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.17.4"
tracing-appender = { version = "0.2" }

tokio = { version = "1.20.0", features = ["full"] }
# opentelemetry example
opentelemetry = { version = "0.17.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.16.0"
