[package]
name = "tracing-opentelemetry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-attributes = "0.1.22"
tracing-opentelemetry = "0.17.4"

tokio = { version = "1.20.0", features = ["full"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"]}
opentelemetry-otlp = { version = "0.10.0", features = ["grpc-sys"] }
opentelemetry-semantic-conventions = "0.9.0"